@@ -35,3 +35,14 @@
 	<li>java 17.0.1</li>
 	<li>Gson 2.8.9</li>
 </ul>
+
+## Εκτέλεση
+Για τη μεταγλώττιση χρησιμοποιούμε την εντολή:
+<code>
+	javac -d . -cp ".;libraries/Gson/gson-2.8.9.jar" --module-path "./libraries/JavaFX/lib" --add-modules javafx.controls,javafx.fxml *.java
+</code>
+
+Για την εκτέλεση χρησιμοποιούμε την εντολή:
+<code>
+	java -cp ".;libraries/Gson/gson-2.8.9.jar" --module-path "./libraries/JavaFX/lib" --add-modules javafx.controls,javafx.fxml Main
+</code>
